# OpenGL-test

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  main.cpp
shaders/: simpleShader.frag  simpleShader.vert
src/: aktor.cpp  aktor.h  openglcoreapp.cpp  openglcoreapp.h  openglobject.cpp  openglobject.h  shader.cpp  shader.h  trapeze.cpp  trapeze.h  triangle.cpp  triangle.h  vertex.h
src/exceptions/: shaderloadexcept.cpp  shaderloadexcept.h
